Remove verbose logs/docs and simplify floor APIs
Strip out a large amount of developer-facing comments, javadoc and logger.accept debug prints across the codebase; remove two floor-building classes (QuarterFloorBuilder, PlacedRoom); and simplify floor placement APIs. FloorPlacer no longer requires a logger and most floor-generator logging was removed; FloorGenerator constructor updated and Main adjusted to match. Other cleanup: removed miscellaneous inline comments and debug messages in EnemyManager, HealthManager, ItemDatabase, PotionKeyHandler, DebugCommands, DamageInterceptor, DodgeManager, MeleeCooldownHandler, PlayerDeathObserver, and related classes; modernized some stream usage; bumped two Time.json timestamps. The change reduces log noise and dead code ahead of further refactors.